# silicate

./: .gitignore  Cargo.toml  README.md  devenv.nix  todo.md
src/: lib.rs  main.rs
src/json/: mod.rs
src/tui/: mod.rs
