[package]
name = "silicate"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
tokio = { version = "1.52.3", features = ["full"] }
argon2 = "0.5.3"
hex = "0.4.3"
keyring = "4.1.1"
clap = { version = "4.0.32", features = ["derive"] }
rpassword = "7.5.4"
arboard = "3.6.1"
colored = "3.1.1"
which = "8.0.4"
